# notes-app

./: .gitignore  config.py  manage.py  pyproject.toml
api/: apps.py  urls.py  views.py
api/migrations/: 0001_initial.py
django_mynotes/: asgi.py  settings.py  urls.py
django_mynotes/django_mynotes/: settings.py  wsgi.py
