[tool.poetry]
name = "notes-app"
version = "0.1.0"
description = "note list using django and react"
authors = ["moreirak14 <kaiquemoreiracloud@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
dynaconf = "^3.1.9"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
